--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="page1">
                 <div class="first-p1">
                     <div class="card">
-                    <img src="1675485765492.jpg" alt="">
+                    <img src="1693147468154.jpeg" alt="">
                     <!-- <img src="./WhatsApp Image 2023-08-05 at 9.27.43 PM.jpeg" alt="">
                     <img src="./hacker.jpg" alt=""> -->
                     </div>
@@ -35,16 +35,16 @@
                 <div class="second-p1">
                     <h3>Hello, Iam</h3>
                     <h1>Mohammed Inthisar</h1>
-                    <h3>FullStack Devoloper</h3>
+                    <h3>MERN STACK Devoloper</h3>
                     <div class="icons">
                         <div class="btn-1">
                                 <a href="" id="da">Download CV</a>
                                 <a href="" id="da">ContaCt US</a>
                         </div>
                         <div class="btn-2">
-                            <a href="" class="btns"><i class="ri-instagram-fill"></i></a>
-                            <a href="" class="btns"><i class="ri-linkedin-box-fill"></i></a>
-                            <a href="" class="btns"><i class="ri-github-fill"></i></a>
+                            <!-- <a href="" class="btns"><i class="ri-instagram-fill"></i></a> -->
+                            <a href="https://www.linkedin.com/in/mdinthisar/" class="btns"><i class="ri-linkedin-box-fill"></i></a>
+                            <a href="https://github.com/MDInthisar/" class="btns"><i class="ri-github-fill"></i></a>
                         </div>
                     </div>
                 </div>
@@ -201,7 +201,7 @@
                 <div class="contact-info">
                     <div class="mail">
                         <i class="ri-mail-open-fill"></i>
-                        <p><a href="https://mail.google.com/mail/u/0/#inbox">inthisar2003@gmail.com</a></p>
+                        <p><a href="https://mail.google.com/mail/u/0/#inbox">inthisarmdofficial@gmail.com</a></p>
                     </div>
                     <div class="linkin">
                         <i class="ri-linkedin-box-fill"></i>
